[package]
name = "eskf_rs"
version = "0.6.0"
authors = ["Jørgen Nordmoen <jorgen@nordmoen.net>", "Peter Krull <peterkrullpeter@gmail.com>"]
description = "Navigation filter based on an Error State Kalman Filter (ESKF)"
keywords = ["navigation", "kalman", "filter", "attitude"]
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std", "mathematics", "science::robotics"]
edition = "2024"
readme = "README.md"
homepage = "https://github.com/peterkrull/eskf-rs"
repository = "https://github.com/peterkrull/eskf-rs"
documentation = "https://docs.rs/eskf"
exclude = ["docs/*"]

[features]
default = ["full-reset"]
# Perform a full filter reset during measurement update
full-reset = []
# Stable, symmetric and positive covariance update, computationally expensive
cov-joseph = []
# Enable to use in no_std environment
no_std = ["nalgebra/libm", "num-traits/libm"]

[dependencies]
nalgebra = { version = "~0.34", default-features = false }
num-traits = { version = "0.2.19", default-features = false, optional = true }

[dev-dependencies]
approx = "0.5.0"
nalgebra = { version = "~0.34", features = ["serde-serialize", "debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotly = "0.6.0"
criterion = "*"

[[example]]
name = "plot_carla"
required-features = []
